--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ article p {
 }
 #nested-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
 }
 iframe {
     width: 80%;
