--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ figcaption {
 }
 #item-a {
     grid-area: header;
-    width: 1fr;
+    width: 1fr 1fr;
     height: 192px;
     background-size: 100%;
     background-color: #fff;
