--- a/style.css
+++ b/style.css
@@ -80,12 +80,12 @@ figcaption {
 #container {
     display: grid;
     grid-gap: 10px;
-    grid-template-columns: reapeat( 9fr);
-    grid-template-rows: auto;
+    grid-template-columns: 16% auto auto 12%;
+    grid-template-rows: auto auto auto;
     grid-template-areas: 
-        "header header header header header header header header header"
-        "nav main main main main main main main aside"
-        "footer footer footer footer footer footer footer footer footer";
+        "header header header header"
+        "nav main main aside"
+        "footer footer footer footer";
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -132,7 +132,7 @@ article p {
 }
 #nested-grid {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr;
 }
 iframe {
     width: 80%;
