--- a/style.css
+++ b/style.css
@@ -1,146 +1,159 @@
 /* color codes:
     gul = #ffcc3d 
     lilla = #4f2683 */
-body {
-    background-color: #4f2683;
-    text-align: center;
-    margin: 20px;
-}
-img {
-    width: 100%;
-    height: auto;
-}
-a    {
-    color: rgb(94, 126, 231);
-    text-decoration: none;
-}
-a:hover {
-    color: #4f2683;
-}
-figure {
-    border: #4f2683 1px solid;
-    padding: 4px;
-}
-figcaption {
-    background-color: #fff;
-    padding: 2px;
-    color: #000;
-    font-size: 0.7rem;
-    font-style: italic;
-    text-align: center;
-}
-#item-a {
-    grid-area: header;
-    width: 1fr 1fr;
-    height: 192px;
-    background-size: 100%;
-    background-color: #fff;
-    border: 10px solid #ffcc3d;
-}
-#item-b {
-    grid-area: nav;
-    text-align: left;
-    background-color: #fff;
-    border: 10px solid #ffcc3d;
-}
-#item-c {
-    grid-area: main;
-    background-color: #4f2683;
-    border: 10px solid #ffcc3d;
-}
-#item-d {
-    grid-area: aside;
-    background-color: #fff;
-    border: 10px solid #ffcc3d;
-    padding: 20px;
-}
-#item-e {
-    grid-area: footer;
-    background-color: #fff;
-    border: 10px solid #ffcc3d;
-}
-#item-b ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: auto;
-  }
-#item-b li a {
-    display: block;
-    color: #4f2683;
-    font-size: 1.8rem;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    background-color: #ffcc3d;
-    border-color: #4f2683;
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    padding: 8px 16px;
-    text-decoration: none;
-}
-#container {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: 16% auto auto 12%;
-    grid-template-rows: auto auto auto;
-    grid-template-areas: 
-        "header header header header"
-        "nav main main aside"
-        "footer footer footer footer";
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-}
-#container > div {
-    text-align: center;
-}
-article {
-    text-align: left;
-    background-color: #ffffff;
-    color: #464444;
-    border: #4f2683 2px solid;
-    border-radius: 0.25rem;
-    font-size: 0.85rem;
-    font-weight: 400;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 10px;
-}
-article h2 {
-    background-color: #ffcc3d;
-    color: #4f2683;
-    padding: 4px;
-    margin-left: 20px;
-    border-top: #000 1px solid;
-    border-bottom: #000 1px solid;
-    border-left: #000 1px solid;
-}
-article h3 {
-    font-size: 0.85rem;;
-    margin: 0 20px;
-    padding: 4px;
-}
-article p {
-    background-color: #ffffff;
-    padding: 10px;
-    margin: 0 20px 20px 20px;
-}
-.article-date {
-    font-size: 0.75rem;
-    color: gray;
-    text-align: right;
-    padding: 2px;
-    margin: 4px 6px 0 0;
-}
-#nested-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-iframe {
-    width: 80%;
-    margin: 0 60px 30px 30px;
-    border: #000 1px solid;
-}
-
-@media screen and (max-width: 600px) {
-    #youtube-video 
-      display: none;
+    body {
+        background-image: url("images/background_logo.png");
+        background-repeat: repeat;
+        width: 60%;
+        margin: 0;
+        padding: 0;
+        margin-left: auto;
+        margin-right: auto;
     }
+        .grid-container {
+        display: grid;
+        grid-template-columns: 16% 1fr 1fr 16%;
+        background-color: #4f2683;
+    }
+    
+    .grid-item {
+        text-align: left;
+        padding: 0.1rem;
+        font-size: 1.2rem;
+    }
+    
+    h2 {
+        background-color: #321a50;
+        color: #ffcc3d;
+        font: 2rem sans-serif;
+        text-align: left;
+        margin: 0;
+        padding: 1rem;
+    }
+    
+    h3 {
+        background-color: #321a50;
+        color: #ffcc3d;
+        font: 1rem sans-serif;
+        text-align: left;
+        margin: 0;
+        padding: 0.5rem;
+    }
+    
+    h3 {
+        background-color: #321a50;
+        color: #ffcc3d;
+        font: 1rem sans-serif;
+        text-align: left;
+        margin: 0;
+        padding: 0.5rem;
+    }
+    
+    h5 {
+        color: #8f8d88;
+        font: 0.8rem sans-serif;
+        font-style: italic;
+        text-align: right;
+        margin-right: 1rem;
+        padding: 0.5rem;
+    }
+    
+    p {
+        font-family:'Times New Roman', Times, serif;
+        margin: 1rem;
+    }
+    
+    .header {
+        grid-column: 1 / span 4;
+        grid-row: 1;
+        border-bottom: 1px solid #000;
+        padding: 0;
+        margin: 0;
+        height: 148px;
+    }
+    
+    .navmenu {
+        grid-column: 1 / span 1;
+        grid-row: 2;
+        border-right: 1px solid black;
+    }
+    
+    .navmenu ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: auto;
+      }
+    
+    .navmenu li a {
+        display: block;
+        color: #4f2683;
+        font-size: 1.8rem;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        background-color: #ffcc3d;
+        border-color: #4f2683;
+        border-top: 1px solid;
+        border-bottom: 1px solid;
+        padding: 8px 16px;
+        text-decoration: none;
+    }
+    
+    .main {
+        grid-column: 2 / span 2;
+        grid-row: 2;
+    }
+    
+    .news {
+        background-color: white;
+        border: #ffcc3d solid 6px;
+        margin: 1.6rem;
+    }
+    
+    .info {
+        background-color: #cdb8e9;
+        padding: 1rem;
+        margin: 0;
+    }
+    
+    figure {
+        margin: 0;
+        padding: 0;
+    }
+    
+    .img {
+        width: 100%;
+    }
+    
+    .sidebar {
+        grid-column: 4;
+        grid-row: 2;
+        border-left: 1px solid black;
+    
+    }
+    
+    .sidebar ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        width: auto;
+    }
+    
+    .sidebar li a {
+        display: block;
+        color: #4f2683;
+        font-size: 1rem;
+        font-family: sans-serif;
+        background-color: #ffcc3d;
+        border-color: #4f2683;
+        border-top: 1px solid;
+        border-bottom: 1px solid;
+        padding: 4px 8px;
+        text-decoration: none;
+    }
+    
+    .footer {
+        grid-column: 1 /span 4;
+        grid-row: 3;
+        border-top: 1px solid #000;
+    }
+    
