--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
     
     p {
         font-family:'Times New Roman', Times, serif;
-        margin: 1rem 1rem 2rem 1rem;
+        margin: 1rem 1rem 1.2rem 1rem;
     }
 
     .header {
@@ -119,6 +119,11 @@
         border-bottom: 1px solid #4f2683;
         padding: 1rem;
         margin: 0 0 2rem 0;
+    }
+
+    ol.info {
+        padding: 1rem 1rem 1rem 2rem;
+        margin: 1rem;
     }
 
     figure {
