--- a/style.css
+++ b/style.css
@@ -116,17 +116,17 @@
 
     .info {
         padding: 1rem;
-        margin: 0 0 2rem 0;
+        margin: 0;
     }
 
     ol.info {
         list-style-image: url('images/list_style_image_vikings.png');
         padding: 1rem 1rem 1rem 2rem;
-        margin: 0 0 1rem 0;
+        margin: 0 0 0.4rem 0;
     }
 
     ol.info li {
-        padding: 0 0 1rem 0;
+        padding: 0 0 rem 0;
     }
 
     figure {
@@ -134,6 +134,10 @@
         padding: 0;
     }
     
+    .twitter-tweet {
+        padding: 1rem;
+    }
+
     .img {
         display: block;
         width: 100%;
