--- a/style.css
+++ b/style.css
@@ -142,7 +142,15 @@
         display: block;
         width: 100%;
     }
-    
+
+    .img_article {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+          
+    }
+
     .sidebar {
         grid-column: 4;
         grid-row: 2;
