--- a/style.css
+++ b/style.css
@@ -21,6 +21,19 @@
         padding: 0.1rem;
         font-size: 1.2rem;
     }
+
+    table {
+        font-size: 1rem;
+        border-collapse: collapse;
+        margin: 1.2rem;
+        width: 80%;
+        table-layout: auto;
+    }
+
+    td, th {
+        border: 1px solid #000;
+        padding: 0.3rem;
+    }
     
     h2 {
         background-color: #321a50;
